# ot-harjoitusty-

./: .gitignore  README.md  vaatimusmäärittely.md
golf_app/: pyproject.toml  tasks.py
golf_app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmäärittely.md
golf_app/src/: main.py
golf_app/src/database/: db.py
golf_app/src/domain/: round.py
golf_app/src/repositories/: round_repository.py  user_repository.py
golf_app/src/services/: auth_service.py  round_service.py  statistics_service.py  validation_service.py
golf_app/src/tests/: test_auth_service.py  test_main.py  test_round.py  test_round_repository.py  test_round_service.py  test_statistics_service.py  test_validation.py
golf_app/src/ui/: add_round_view.py  login_view.py  main_view.py  register_view.py  round_list_view.py  stats_view.py  styles.py
golf_app/src/ui/utils/: entry_utils.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
